--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@ Author URL: http://icrossoft.com
                 <ul>
                     <!--<li> <a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a></li>-->
                     <!--<li> <a href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a></li>-->
-                    <li><i class="fa fa-phone" aria-hidden="true"></i> Contactenos: (+57) 320 239 74 48 / 321 211 08 67</li>
-                    <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@invictus.com.co">info@invictus.com.co</a></li>
+                    <li>
+                        <i class="fa fa-phone" aria-hidden="true"></i> Contactenos: (+57) 320 239 74 48
+                    </li>
+                    <li>
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i> 
+                        <a href="mailto:info@invictus.com.co">info@invictus.com.co</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -47,7 +52,7 @@ Author URL: http://icrossoft.com
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 logo_agile">
-                    <h1><a href="index.html"><span>E</span>lite Shoppy <i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1>
+                    <h1><a href="index.html"><span>I</span>nvictus Sport <i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1>
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 agileits-social top_content">
