--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Author URL: http://icrossoft.com
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 logo_agile">
-                    <h1><a href="index.html"><span>I</span>NVICTUS CULTURE SPORT <i class="fa fa-shopping-bag top_logo_agile_bag" aria-hidden="true"></i></a></h1>
+                    <h1><a href="index.html"><span>B</span>IENVENIDOS </a></h1>
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 agileits-social top_content">
