--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ Author URL: http://icrossoft.com
                 <div class="col-md-4 agileits-social top_content">
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social">
                         <li class="share">Siguenos en : </li>
-                        <li><a href="#" title="Facebook" class="facebook">
+                        <li><a href="https://www.facebook.com/" title="Facebook" class="facebook">
                                 <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
                                 <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div></a></li>
-                        <li><a href="#" title="Instragram" class="instagram">
+                        <li><a href="https://www.instagram.com/" title="Instragram" class="instagram">
                                 <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
                                 <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div></a></li>
                     </ul>
