--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Author URL: http://icrossoft.com
     <head>
         <title>Invictus culture sport</title>
         <!--/tags -->
+        <img src="head.png" alt="Los Tejos" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="Elite Shoppy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
