--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Author URL: http://icrossoft.com
     <head>
         <title>Invictus culture sport</title>
         <!--/tags -->
-        <img src="head.png" alt="Los Tejos" />
+        <link rel="icon" type="image/png" href="images/head.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="Elite Shoppy Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
@@ -90,7 +90,7 @@ Author URL: http://icrossoft.com
                             <div class="collapse navbar-collapse menu--shylock" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav menu__list">
                                     <li class="active menu__item menu__item--current"><a class="menu__link" href="index.html">Inicio <span class="sr-only">(current)</span></a></li>
-                                    <li class=" menu__item"><a class="menu__link" href="about.html">Nosotros</a></li>
+                                    <!--<li class=" menu__item"><a class="menu__link" href="about.html">Nosotros</a></li>-->
                                     <li class="dropdown menu__item">
                                         <a href="#" class="dropdown-toggle menu__link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ropa hombre<span class="caret"></span></a>
                                         <ul class="dropdown-menu multi-column columns-3">
@@ -313,9 +313,8 @@ Author URL: http://icrossoft.com
                 <div class="item active"> 
                     <div class="container">
                         <div class="carousel-caption">
-                            <h3>The Biggest <span>Sale</span></h3>
-                            <p>Special for today</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
+                            <h3><span></span></h3>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -371,22 +370,16 @@ Author URL: http://icrossoft.com
             <div class="container">
                 <div class="banner_bottom_agile_info_inner_w3ls">
                     <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
-                        <figure class="effect-roxy">
-                            <img src="images/bottom1.jpg" alt=" " class="img-responsive" />
-                            <figcaption>
-                                <h3><span>F</span>all Ahead</h3>
-                                <p>New Arrivals</p>
-                            </figcaption>			
-                        </figure>
+                        <div align="center">
+                            <img src="images/lauren.png" style="width: 150px; height: 80px;">
+                        </div>
+                        <iframe width="554" height="300" src="https://www.youtube.com/embed/3HxpqgOV8Z0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                     <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
-                        <figure class="effect-roxy">
-                            <img src="images/bottom2.jpg" alt=" " class="img-responsive" />
-                            <figcaption>
-                                <h3><span>F</span>all Ahead</h3>
-                                <p>New Arrivals</p>
-                            </figcaption>			
-                        </figure>
+                        <div align="center">
+                            <img src="images/lacoste.png" style="width: 150px; height: 80px;">
+                        </div>
+                        <iframe width="544" height="300" src="https://www.youtube.com/embed/E6O6G_hq6P8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                     <div class="clearfix"></div>
                 </div> 
