--- a/index.html
+++ b/index.html
@@ -370,10 +370,12 @@ Author URL: http://icrossoft.com
             <div class="container">
                 <div class="banner_bottom_agile_info_inner_w3ls">
                     <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
-                        <div align="center">
-                            <img src="images/lauren.png" style="width: 150px; height: 80px;">
-                        </div>
-                        <iframe width="554" height="300" src="https://www.youtube.com/embed/3HxpqgOV8Z0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <figcaption>   
+                            <div align="center">
+                                <img src="images/lauren.png" style="width: 150px; height: 80px;">
+                            </div>  
+                            <iframe width="554" height="300" src="https://www.youtube.com/embed/3HxpqgOV8Z0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        </figcaption>	
                     </div>
                     <div class="col-md-6 wthree_banner_bottom_grid_three_left1 grid">
                         <div align="center">
