--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Author URL: http://icrossoft.com
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 logo_agile">
-                    <h1><a href="index.html"><b>BIENVENIDOS</b> </a></h1>
+                    <h1><a href="index.html"><b>BIENVENIDOSssss</b> </a></h1>
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 agileits-social top_content">
