--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Author URL: http://icrossoft.com
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 logo_agile">
-                    <h1><a href="index.html"><b>BIENVENIDOSsss</b> </a></h1>
+                    <h1><a href="index.html"><b>BIENVENIDOS</b> </a></h1>
                 </div>
                 <!-- header-bot -->
                 <div class="col-md-4 agileits-social top_content">
@@ -321,9 +321,8 @@ Author URL: http://icrossoft.com
                 <div class="item item2"> 
                     <div class="container">
                         <div class="carousel-caption">
-                            <h3>Summer <span>Collection</span></h3>
-                            <p>New Arrivals On Sale</p>
-                            <a class="hvr-outline-out button2" href="mens.html">Shop Now </a>
+                            <h3><span></span></h3>
+                            <p></p>
                         </div>
                     </div>
                 </div>
@@ -390,11 +389,11 @@ Author URL: http://icrossoft.com
         <!-- schedule-bottom -->
         <div class="schedule-bottom">
             <div class="col-md-6 agileinfo_schedule_bottom_left">
-                <img src="images/mid.jpg" alt=" " class="img-responsive" />
+                <img src="images/shop.png" alt=" " class="img-responsive" />
             </div>
             <div class="col-md-6 agileits_schedule_bottom_right">
                 <div class="w3ls_schedule_bottom_right_grid">
-                    <h3>Save up to <span>50%</span> in this week</h3>
+                    <h3>Ahorre hasta un <span>50%</span> esta semana</h3>
                     <p>Suspendisse varius turpis efficitur erat laoreet dapibus. 
                         Mauris sollicitudin scelerisque commodo.Nunc dapibus mauris sed metus finibus posuere.</p>
                     <div class="col-md-4 w3l_schedule_bottom_right_grid1">
